<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".company_section.view.activity.Login_Activity">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:src="@drawable/back"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:src="@drawable/logo2"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_27sdp"
            android:layout_height="wrap_content"/>
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:text="@string/welcome"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"/>
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:text="@string/learn"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/graytext"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/boarder_gray"
            android:layout_height="wrap_content">

            <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/username"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorBlack" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/boarder_gray"
            android:layout_height="wrap_content">
            <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                android:layout_width="match_parent"
                android:background="@null"
                android:hint="@string/password"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/_12sdp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_height="wrap_content">
            <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
                android:layout_width="wrap_content"
                android:text="@string/forgot_password"
                android:id="@+id/tv_fgt_pwd"
                android:layout_alignParentRight="true"
                android:padding="@dimen/_5sdp"
                android:layout_gravity="center"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/colororange"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/ll_login"
            android:background="@drawable/boarder_blue"
            android:layout_height="wrap_content">
            <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
                android:layout_width="match_parent"
                android:text="@string/login"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/_5sdp"
        android:id="@+id/ll_signup"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:textColor="@color/graytext"
            android:textSize="@dimen/_14sdp"
            android:text="@string/dont_account"
            android:layout_height="wrap_content"/>
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:textColor="@color/colororange"
            android:layout_marginLeft="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/signup"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>