<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".company_section.view.activity.Forget_Password_Activity">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_back"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/back" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/img_back"
        android:layout_margin="@dimen/_10sdp"
        android:layout_height="match_parent">
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_24sdp" />
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_5sdp"
            android:text="@string/pwd_link"
            android:textColor="@color/graytext"
            android:textSize="@dimen/_16sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:background="@drawable/boarder_gray">

            <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email_address"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_24sdp"
            android:id="@+id/ll_reset"
            android:background="@drawable/boarder_blue"
            android:layout_height="wrap_content">
            <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
                android:layout_width="match_parent"
                android:text="@string/reset"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>