<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/back" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/img_back"
        android:layout_margin="@dimen/_10sdp"
        android:layout_height="match_parent">

        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
        android:layout_width="wrap_content"
        android:text="@string/change_password"
        android:textSize="@dimen/_24sdp"
        android:gravity="center_vertical"
        android:textColor="@color/naturalGray"
        android:layout_height="wrap_content"/>
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:text="Choose a new password for your account below."
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:textColor="@color/graytext"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/boarder_gray"
            android:layout_height="wrap_content">

            <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/current_password"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/boarder_gray"
            android:layout_height="wrap_content">

            <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/new_password"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/boarder_gray"
            android:layout_height="wrap_content">

            <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/repassword"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:id="@+id/ll_change"
            android:background="@drawable/boarder_blue"
            android:layout_height="wrap_content">
            <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
                android:layout_width="match_parent"
                android:text="@string/change"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>