<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".company_section.view.activity.Login_Activity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_back"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_27sdp"
                    android:src="@drawable/logo2" />

                <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/signup"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_16sdp" />

                <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/learn"
                    android:textAlignment="center"
                    android:textColor="@color/graytext"
                    android:textSize="@dimen/_16sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/boarder_gray"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/plus" />

                    <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/cover"
                        android:textAlignment="center"
                        android:textColor="@color/graytext"
                        android:textSize="@dimen/_16sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/boarder_gray">

                    <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/username"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/boarder_gray">

                    <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/email"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/boarder_gray">

                    <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/password"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/boarder_gray">

                    <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/company_name"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/boarder_gray">

                    <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/company_bio"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/boarder_gray">

                    <com.gender.gendercomfortable.controller.CustomViews.MyEditTextNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/company_address"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/boarder_blue">

                    <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_12sdp"
                        android:text="@string/signup"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_account"
                        android:textColor="@color/graytext"
                        android:textSize="@dimen/_14sdp" />

                    <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text=" @string/login"
                        android:textColor="@color/colororange"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>