<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:text="@string/description"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:textColor="@color/naturalGray"
            android:layout_height="wrap_content"/>
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:text="Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:gravity="center_vertical"
            android:textColor="@color/graytext"
            android:layout_height="wrap_content"/>
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:text="@string/certification"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:textColor="@color/naturalGray"
            android:layout_height="wrap_content"/>
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:text="Ut enim ad minim veniam"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:gravity="center_vertical"
            android:textColor="@color/graytext"
            android:layout_height="wrap_content"/>
        <com.gender.gendercomfortable.controller.CustomViews.MyTextViewRegular
            android:layout_width="wrap_content"
            android:text="@string/Curriculum"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:textColor="@color/naturalGray"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/rv_lession_list"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</RelativeLayout>